close button alignment issue

--- a/app/styles/_patient-navbar.scss
+++ b/app/styles/_patient-navbar.scss
@@ -121,3 +121,8 @@
     padding-left: 5px;
   }
 }
+.graph_close_btn{
+  position: absolute !important;
+  top:0 !important;
+  right:5px !important;
+}
